setup/07-mssql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-dev
spec:
  clusterIP: None
  selector:
    app: mssql-dev
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql-dev
spec:
  serviceName: mssql-dev
  replicas: 1
  selector:
    matchLabels:
      app: mssql-dev
  template:
    metadata:
      labels:
        app: mssql-dev
    spec:
      terminationGracePeriodSeconds: 10
      nodeSelector:
        beta.kubernetes.io/arch: amd64
        beta.kubernetes.io/os: linux
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2017-latest
        ports:
        - containerPort: 1433
          name: mssql
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql
  volumeClaimTemplates:
    - metadata:
        name: mssqldb
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 8Gi
---
