setup/11-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greeter-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  rules:
  - host: greeter.demo
    http:
      paths:
      - backend:
          serviceName: greeter-webapi
          servicePort: 80
